--- a/app/views/psd-revised-flow/images.html
+++ b/app/views/psd-revised-flow/images.html
@@ -66,6 +66,149 @@
 
     <section id="page-content" role="region" class="govuk-grid-column-three-quarters">
 
+        <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">The case images supporting this case</h2>
+
+        <section class="govuk-!-margin-bottom-9">
+            <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image">
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        <span class="govuk-!-font-size-24 govuk-!-margin-right-1">1.</span> Image and title
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        
+                        <figure>
+                            <a href="../public/images/heat-stain.webp" class="govuk-link govuk-link--no-visited-state" target="_blank" title="Opens in a new tab">
+                                <img src="../public/images/heat-stain.webp">
+                            </a>
+                            <figcaption>Burnt floor</figcaption>
+                        </figure>
+    
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Image description
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        The product burns PVC flooring. Lorem ipsum oluta nisi assumenda, aperiam enim dolores labore non fuga. Dolorum rem vel architecto. Aut, maiores quisquam elit.
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Updated
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        6 June 2022
+                    </dd>
+                </div>
+            </dl>
+    
+            <div class="opss-text-align-right opss-margin-bottom-1-desktop">
+                <ul class="govuk-list">
+                    <li class="govuk-!-display-inline govuk-!-margin-left-2">
+                      <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Edit this image<span class="govuk-visually-hidden">: Burnt floor</span></a>
+                    </li>
+                    <li class="govuk-!-display-inline govuk-!-margin-left-2">
+                      <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Remove this image<span class="govuk-visually-hidden">: Burnt floor</span></a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="govuk-!-margin-bottom-9">
+            <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image">
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        <span class="govuk-!-font-size-24 govuk-!-margin-right-1">2.</span> Image and title
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        
+                        <figure>
+                            <a href="../public/images/kills-dogs.jpg" class="govuk-link govuk-link--no-visited-state" target="_blank" title="Opens in a new tab">
+                                <img src="../public/images/kills-dogs.jpg">
+                            </a>
+                            <figcaption>Dead puppy</figcaption>
+                        </figure>
+    
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Image description
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        The glass cleaner kills puppies when accidently used on the floor. Modi quia labore inventore ea temporibus perspiciatis distinctio libero id sapiente consequuntur aliquam ipsa, rem suscipit nihil! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur porro excepturi labore quia vero. Atque aperiam nemo soluta repudiandae assumenda facere a, dignissimos veniam vel ea at nihil esse? Obcaecati!
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Updated
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        21 August 2022
+                    </dd>
+                </div>
+            </dl>
+    
+            <div class="opss-text-align-right opss-margin-bottom-1-desktop">
+                <ul class="govuk-list">
+                    <li class="govuk-!-display-inline govuk-!-margin-left-2">
+                      <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Edit this image<span class="govuk-visually-hidden">: Dead puppy</span></a>
+                    </li>
+                    <li class="govuk-!-display-inline govuk-!-margin-left-2">
+                      <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Remove this image<span class="govuk-visually-hidden">: Dead puppy</span></a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="govuk-!-margin-bottom-9">
+            <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image">
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        <span class="govuk-!-font-size-24 govuk-!-margin-right-1">3.</span> Image and title
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        
+                        <figure>
+                            <a href="../public/images/burn-on-leg.jpg" class="govuk-link govuk-link--no-visited-state" target="_blank" title="Opens in a new tab">
+                                <img src="../public/images/burn-on-leg.jpg">
+                            </a>
+                            <figcaption>Burn on leg</figcaption>
+                        </figure>
+    
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Image description
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Photograph of original complainant with burns on right lower leg. ea temporibus perspiciatis distinctio libero id sapiente consequuntur aliquam ipsa, rem suscipit nihil! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur porro excepturi labore quia vero. Atque aperiam nemo soluta repudiandae assumenda facere a, dignissimos veniam vel ea at nihil esse? Obcaecati!
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Updated
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        16 May 2022
+                    </dd>
+                </div>
+            </dl>
+    
+            <div class="opss-text-align-right opss-margin-bottom-1-desktop">
+                <ul class="govuk-list">
+                    <li class="govuk-!-display-inline govuk-!-margin-left-2">
+                      <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Edit this image<span class="govuk-visually-hidden">: Burn on leg</span></a>
+                    </li>
+                    <li class="govuk-!-display-inline govuk-!-margin-left-2">
+                      <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Remove this image<span class="govuk-visually-hidden">: Burn on leg</span></a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
     </section>
 
 </div>
