--- a/app/views/psd-revised-flow/inc_products_pg_content.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content.html
@@ -62,7 +62,7 @@
 
     <section id="page-content" role="region" class="govuk-grid-column-three-quarters">
 
-        <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">The Product(s) included in this case</h2>
+        <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">The products included in this case</h2>
 
         <section>
 
