--- a/app/views/psd-revised-flow/images.html
+++ b/app/views/psd-revised-flow/images.html
@@ -70,20 +70,25 @@
 
         <section class="govuk-!-margin-bottom-9">
             <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image">
-                <div class="govuk-summary-list__row">
+                <div class="govuk-summary-list__row govuk-summary-list__row--no-border">
                     <dt class="govuk-summary-list__key">
-                        <span class="govuk-!-font-size-24 govuk-!-margin-right-1">1.</span> Image and title
+                        <span class="govuk-!-margin-right-1">1.</span> Image and title
                     </dt>
                     <dd class="govuk-summary-list__value">
                         
                         <figure>
+                            <figcaption>Burnt floor</figcaption>
                             <a href="../public/images/heat-stain.webp" class="govuk-link govuk-link--no-visited-state" target="_blank" title="Opens in a new tab">
                                 <img src="../public/images/heat-stain.webp">
                             </a>
-                            <figcaption>Burnt floor</figcaption>
                         </figure>
     
                     </dd>
+                    <dd class="opss-summary-list-mixed_edit-image">
+                        <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset" href="#">
+                          Edit this image<span class="govuk-visually-hidden">: Burnt floor</span>
+                        </a>
+                    </dd>                    
                 </div>
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
@@ -104,33 +109,39 @@
             </dl>
     
             <div class="opss-text-align-right opss-margin-bottom-1-desktop">
-                <ul class="govuk-list">
+                <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Remove this image<span class="govuk-visually-hidden">: Burnt floor</span></a>
+                <!--ul class="govuk-list">
                     <li class="govuk-!-display-inline govuk-!-margin-left-2">
                       <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Edit this image<span class="govuk-visually-hidden">: Burnt floor</span></a>
                     </li>
                     <li class="govuk-!-display-inline govuk-!-margin-left-2">
                       <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Remove this image<span class="govuk-visually-hidden">: Burnt floor</span></a>
                     </li>
-                </ul>
+                </ul-->
             </div>
         </section>
 
         <section class="govuk-!-margin-bottom-9">
             <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image">
-                <div class="govuk-summary-list__row">
+                <div class="govuk-summary-list__row govuk-summary-list__row--no-border">
                     <dt class="govuk-summary-list__key">
-                        <span class="govuk-!-font-size-24 govuk-!-margin-right-1">2.</span> Image and title
+                        <span class="govuk-!-margin-right-1">2.</span> Image and title
                     </dt>
                     <dd class="govuk-summary-list__value">
                         
                         <figure>
+                            <figcaption>Dead puppy</figcaption>
                             <a href="../public/images/kills-dogs.jpg" class="govuk-link govuk-link--no-visited-state" target="_blank" title="Opens in a new tab">
                                 <img src="../public/images/kills-dogs.jpg">
                             </a>
-                            <figcaption>Dead puppy</figcaption>
                         </figure>
     
                     </dd>
+                    <dd class="opss-summary-list-mixed_edit-image">
+                        <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset" href="#">
+                          Edit this image<span class="govuk-visually-hidden">: Dead puppy</span>
+                        </a>
+                    </dd>                     
                 </div>
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
@@ -151,33 +162,31 @@
             </dl>
     
             <div class="opss-text-align-right opss-margin-bottom-1-desktop">
-                <ul class="govuk-list">
-                    <li class="govuk-!-display-inline govuk-!-margin-left-2">
-                      <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Edit this image<span class="govuk-visually-hidden">: Dead puppy</span></a>
-                    </li>
-                    <li class="govuk-!-display-inline govuk-!-margin-left-2">
-                      <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Remove this image<span class="govuk-visually-hidden">: Dead puppy</span></a>
-                    </li>
-                </ul>
+                <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Remove this image<span class="govuk-visually-hidden">: Dead puppy</span></a>
             </div>
         </section>
 
         <section class="govuk-!-margin-bottom-9">
             <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image">
-                <div class="govuk-summary-list__row">
+                <div class="govuk-summary-list__row govuk-summary-list__row--no-border">
                     <dt class="govuk-summary-list__key">
-                        <span class="govuk-!-font-size-24 govuk-!-margin-right-1">3.</span> Image and title
+                        <span class="govuk-!-margin-right-1">3.</span> Image and title
                     </dt>
                     <dd class="govuk-summary-list__value">
                         
                         <figure>
+                            <figcaption>Burn on leg</figcaption>
                             <a href="../public/images/burn-on-leg.jpg" class="govuk-link govuk-link--no-visited-state" target="_blank" title="Opens in a new tab">
                                 <img src="../public/images/burn-on-leg.jpg">
                             </a>
-                            <figcaption>Burn on leg</figcaption>
                         </figure>
     
                     </dd>
+                    <dd class="opss-summary-list-mixed_edit-image">
+                        <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset" href="#">
+                          Edit this image<span class="govuk-visually-hidden">: Burn on leg</span>
+                        </a>
+                    </dd>                     
                 </div>
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
@@ -198,14 +207,7 @@
             </dl>
     
             <div class="opss-text-align-right opss-margin-bottom-1-desktop">
-                <ul class="govuk-list">
-                    <li class="govuk-!-display-inline govuk-!-margin-left-2">
-                      <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Edit this image<span class="govuk-visually-hidden">: Burn on leg</span></a>
-                    </li>
-                    <li class="govuk-!-display-inline govuk-!-margin-left-2">
-                      <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Remove this image<span class="govuk-visually-hidden">: Burn on leg</span></a>
-                    </li>
-                </ul>
+                <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Remove this image<span class="govuk-visually-hidden">: Burn on leg</span></a>
             </div>
         </section>
 
