--- a/app/views/psd-revised-flow/businesses.html
+++ b/app/views/psd-revised-flow/businesses.html
@@ -80,6 +80,276 @@
 
     <section id="page-content" role="region" class="govuk-grid-column-three-quarters">
 
+        <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">The businesses related to this case</h2>
+        
+        <!-- govuk-!-padding-top-3 govuk-!-padding-right-4 govuk-!-padding-bottom-2 govuk-!-padding-left-4 opss-border-all -->
+
+        <section id="biz-1" class="govuk-!-margin-bottom-9">
+
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-three-quarters">
+                    <h3 class="govuk-heading-m">
+                        Smith and Son importers
+                    </h3>
+                </div>
+                <div class="govuk-grid-column-one-quarter">
+                    <div class="opss-text-align-right opss-margin-bottom-1-desktop">
+                        <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+                            Edit this business<span class="govuk-visually-hidden">: Smith and Son importers</span>
+                        </a><!-- this link simply goes to the full business page (in the businesses section: its Back link should return here)-->
+                    </div>
+                </div>
+            </div>            
+
+            <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+                <div class="govuk-summary-list__row govuk-summary-list__row--no-border">
+                    <dt class="govuk-summary-list__key">
+                        Trading name
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Smith and Son importers
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Legal name
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Smith &amp; Son Importers Limited <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Registered name</span>
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Business type
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Retailer
+                    </dd>
+                </div>                
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Company number
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        86532488 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Registration number for incorporated businesses</span>
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Address 1
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        72 Guild Street <br>London <br>SE23 6FH <br>United Kingdom  
+                        <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
+                            <span class="govuk-visually-hidden">: This is the</span> Registered office
+                        </span>
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Address 2
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        5 Liverpool road <br>Liverpool <br>L2 2BX
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Contact 1
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        <!--p class="govuk-body">David Brown</p>
+                        <p class="govuk-body">07700 900457</p>
+                        <p class="govuk-body">sarah.phillips@example.com</p-->
+                        <dl class="opss-nested-definition-list">
+                            <div>
+                                <dt>Name</dt>
+                                <dd>Mr David Brown</dd>
+                            </div>
+                            <div>
+                                <dt>Telephone</dt>
+                                <dd>07700 900457</dd>   
+                            </div>
+                            <div>
+                                <dt>Email</dt>
+                                <dd>david.brown@example.com</dd> 
+                            </div>
+                            <div>
+                                <dt>Position</dt>
+                                <dd>CEO</dd> 
+                            </div>                            
+                        </dl>
+                    </dd>
+                </div> 
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Contact 2
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        <dl class="opss-nested-definition-list">
+                            <div>
+                                <dt>Name</dt>
+                                <dd>Janet Smith</dd>
+                            </div>
+                            <div>
+                                <dt>Telephone</dt>
+                                <dd>07700 900458</dd>   
+                            </div>
+                            <div>
+                                <dt>Email</dt>
+                                <dd>janet.smith@example.com</dd> 
+                            </div>
+                            <div>
+                                <dt>Position</dt>
+                                <dd>Sales manager</dd> 
+                            </div>                            
+                        </dl>
+                    </dd>
+                </div> 
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Attachments
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">4 file attachments<span class="govuk-visually-hidden">for Smith and Son importers</span></a>
+                        <!-- *** this hyperlink goes direct to the full business page, but appends #attachments to the URL *** -->
+                    </dd>
+                </div>  
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Cases
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Included in this 1 case
+                    </dd>
+                </div>                                                             
+            </dl>
+
+            <p class="govuk-body-s govuk-!-margin-bottom-0 opss-secondary-text opss-text-align-right">
+                To view and edit all the details about this business go to the full <a href="#" class="govuk-link govuk-link--no-visited-state">business page</a> <span class="govuk-visually-hidden">for Smith and Son importers</span>
+            </p>
+    
+            <div class="opss-text-align-right opss-margin-bottom-1-desktop opss-margin-top-1-mobile">
+                <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Remove this business<span class="govuk-visually-hidden">: Smith and Son importers</span></a>
+            </div>
+        </section>
+
+        <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible govuk-!-margin-top-6">
+
+        <section id="biz-2" class="govuk-!-margin-bottom-9">
+
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-three-quarters">
+                    <h3 class="govuk-heading-m">
+                        Chemists R Us
+                    </h3>
+                </div>
+                <div class="govuk-grid-column-one-quarter">
+                    <div class="opss-text-align-right opss-margin-bottom-1-desktop">
+                        <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+                            Edit this business<span class="govuk-visually-hidden">: Chemists R Us</span>
+                        </a><!-- this link simply goes to the full business page (in the businesses section: its Back link should return here)-->
+                    </div>
+                </div>
+            </div>            
+
+            <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt">
+                <div class="govuk-summary-list__row govuk-summary-list__row--no-border">
+                    <dt class="govuk-summary-list__key">
+                        Trading name
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Chemists R Us
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Legal name
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Corby Chemist Products Ltd <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Registered name</span>
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Business type
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Distributor
+                    </dd>
+                </div>                
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Company number
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                         
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Address
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        72 Guild Street <br>London <br>SE23 6FH <br>United Kingdom  
+                        <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
+                            <span class="govuk-visually-hidden">: This is the</span> Registered office
+                        </span>
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Contact
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        <dl class="opss-nested-definition-list">
+                            <div>
+                                <dt>Name</dt>
+                                <dd>Nigel Harrison</dd>
+                            </div>
+                            <div>
+                                <dt>Telephone</dt>
+                                <dd>0124 886352</dd>   
+                            </div>
+                            <div>
+                                <dt>Email</dt>
+                                <dd>chemistsRus@example.com</dd> 
+                            </div>
+                            <div>
+                                <dt>Position</dt>
+                                <dd></dd> 
+                            </div>                            
+                        </dl>
+                    </dd>
+                </div> 
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Attachments
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Cases
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">Included in 3 cases</a>
+                        <!-- *** this hyperlink goes to the business pages but appends #cases to the end of the URL. Note: 'cases', plural *** -->
+                    </dd>
+                </div>                                                                
+            </dl>
+
+            <p class="govuk-body-s govuk-!-margin-bottom-0 opss-secondary-text opss-text-align-right">
+                To view and edit all the details about this business go to the full <a href="#" class="govuk-link govuk-link--no-visited-state">business page</a> <span class="govuk-visually-hidden">for Chemists R Us</span>
+            </p>
+    
+            <div class="opss-text-align-right opss-margin-bottom-1-desktop opss-margin-top-1-mobile">
+                <a class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset" href="#">Remove this business<span class="govuk-visually-hidden">: Chemists R Us</span></a>
+            </div>
+        </section>        
+
     </section>
 
 </div>
