--- a/app/views/psd-revised-flow/images.html
+++ b/app/views/psd-revised-flow/images.html
@@ -72,12 +72,12 @@
             <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image">
                 <div class="govuk-summary-list__row govuk-summary-list__row--no-border">
                     <dt class="govuk-summary-list__key">
-                        <span class="govuk-!-margin-right-1">1.</span> Image and title
+                        Image and title
                     </dt>
                     <dd class="govuk-summary-list__value">
                         
                         <figure>
-                            <figcaption>Burnt floor</figcaption>
+                            <figcaption><span>1.</span> Burnt floor</figcaption>
                             <a href="../public/images/heat-stain.webp" class="govuk-link govuk-link--no-visited-state" target="_blank" title="Opens in a new tab">
                                 <img src="../public/images/heat-stain.webp">
                             </a>
@@ -125,12 +125,12 @@
             <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image">
                 <div class="govuk-summary-list__row govuk-summary-list__row--no-border">
                     <dt class="govuk-summary-list__key">
-                        <span class="govuk-!-margin-right-1">2.</span> Image and title
+                        Image and title
                     </dt>
                     <dd class="govuk-summary-list__value">
                         
                         <figure>
-                            <figcaption>Dead puppy</figcaption>
+                            <figcaption><span class="govuk-!-margin-right-1">2.</span> Dead puppy</figcaption>
                             <a href="../public/images/kills-dogs.jpg" class="govuk-link govuk-link--no-visited-state" target="_blank" title="Opens in a new tab">
                                 <img src="../public/images/kills-dogs.jpg">
                             </a>
@@ -170,12 +170,12 @@
             <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--image">
                 <div class="govuk-summary-list__row govuk-summary-list__row--no-border">
                     <dt class="govuk-summary-list__key">
-                        <span class="govuk-!-margin-right-1">3.</span> Image and title
+                        Image and title
                     </dt>
                     <dd class="govuk-summary-list__value">
                         
                         <figure>
-                            <figcaption>Burn on leg</figcaption>
+                            <figcaption><span class="govuk-!-margin-right-1">3.</span> Burn on leg</figcaption>
                             <a href="../public/images/burn-on-leg.jpg" class="govuk-link govuk-link--no-visited-state" target="_blank" title="Opens in a new tab">
                                 <img src="../public/images/burn-on-leg.jpg">
                             </a>
