--- a/app/views/psd-revised-flow/index.html
+++ b/app/views/psd-revised-flow/index.html
@@ -273,7 +273,7 @@
             </li>
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/images.html" target="_blank">Case page - Images</a> - shows the case images 
-                <br><span class="govuk-!-font-size-16">The Edit and Rmove links only show for users with editing rights. Tech debt: on the current 'Remove image' form page, we should include the image, as done on the current 'Edit image' form page</span>.
+                <br><span class="govuk-!-font-size-16">The Edit and Remove links only show for users with editing rights. Tech debt: on the current 'Remove image' form page, we should include the image, as done on the current 'Edit image' form page</span>.
             </li>             
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/businesses.html" target="_blank">Case page - Businesses</a> - shows the businesses information
