left nav updates to cases pages

--- a/app/views/psd-revised-flow/images.html
+++ b/app/views/psd-revised-flow/images.html
@@ -40,6 +40,8 @@
             Skip to the main content
         </a>
 
+        {% include "psd-revised-flow/inc_left_nav_top-part-only.html" %}              
+
         <ul class="govuk-list opss-left-nav">
             <li>
                 <a href="/psd-revised-flow/case-trading-stds-landing.html" class="govuk-link govuk-link--no-visited-state">
