--- a/app/views/psd-revised-flow/supporting-information.html
+++ b/app/views/psd-revised-flow/supporting-information.html
@@ -70,9 +70,13 @@
             Skip to the main content
         </a>
 
+        {% include "psd-revised-flow/inc_left_nav_top-part-only.html" %}      
+
         <ul class="govuk-list opss-left-nav">
             <li>
-                <a href="/psd-revised-flow/case.html" class="govuk-link govuk-link--no-visited-state">Case</a>
+                <a href="/psd-revised-flow/case-trading-stds-landing.html" class="govuk-link govuk-link--no-visited-state">
+                    Case <span class="govuk-!-font-weight-regular">&nbsp;2101-0008</span>
+                </a>
             </li>
             <li>
                 <a href="/psd-revised-flow/products.html" class="govuk-link govuk-link--no-visited-state">Products <span>(1)</span></a>
@@ -84,7 +88,7 @@
                 <a href="/psd-revised-flow/images.html" class="govuk-link govuk-link--no-visited-state">Images <span>(3)</span></a>
             </li>
             <li class="opss-left-nav__active">
-                <a href="/psd-revised-flow/supporting-information.html#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">Supporting information <span>(9)</span></a>
+                <a href="/psd-revised-flow/supporting-information.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">Supporting information <span>(9)</span></a>
 
                 <ul class="govuk-list">
                     <li>
